--- a/app/src/main/res/layout/album_view.xml
+++ b/app/src/main/res/layout/album_view.xml
@@ -5,6 +5,7 @@
     android:layout_width="180dp"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
+    android:foreground="?attr/selectableItemBackground"
     card_view:cardCornerRadius="4dp"
     card_view:cardElevation="4dp">
 
@@ -19,7 +20,7 @@
             android:layout_height="150dp"
             android:contentDescription="@string/album_art"
             android:scaleType="centerCrop"
-            tools:src="@drawable/material_image" />
+            tools:src="@drawable/generic_album_art_4" />
 
         <TextView
             android:id="@+id/album_name"
