--- a/app/src/main/res/layout/song_view.xml
+++ b/app/src/main/res/layout/song_view.xml
@@ -4,16 +4,15 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:foreground="?attr/selectableItemBackground"
+    android:padding="8dp"
     tools:ignore="UnusedAttribute">
 
     <TextView
         android:id="@+id/song_number"
-        android:layout_width="wrap_content"
+        android:layout_width="48dp"
         android:layout_height="wrap_content"
-        android:paddingLeft="12dp"
-        android:paddingTop="12dp"
-        android:paddingRight="20dp"
-        android:paddingBottom="12dp"
+        android:gravity="center"
+        android:padding="12dp"
         tools:ignore="RtlHardcoded"
         tools:text="1" />
 
@@ -45,6 +44,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
+        android:gravity="center"
         android:padding="12dp"
         tools:ignore="RtlHardcoded"
         tools:text="4:31" />
