--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
                 card_view:cardCornerRadius="4dp"
-                card_view:cardElevation="4dp">
+                card_view:cardElevation="2dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -59,8 +59,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
                 card_view:cardCornerRadius="4dp"
-                card_view:cardElevation="4dp"
-                card_view:contentPadding="8dp">
+                card_view:cardElevation="2dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -70,6 +69,7 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_margin="8dp"
                         android:text="@string/favourites"
                         android:textSize="24sp" />
 
@@ -87,8 +87,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
                 card_view:cardCornerRadius="4dp"
-                card_view:cardElevation="4dp"
-                card_view:contentPadding="8dp">
+                card_view:cardElevation="2dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -98,6 +97,7 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_margin="8dp"
                         android:text="@string/popular"
                         android:textSize="24sp" />
 
@@ -115,8 +115,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
                 card_view:cardCornerRadius="4dp"
-                card_view:cardElevation="4dp"
-                card_view:contentPadding="8dp">
+                card_view:cardElevation="2dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -126,6 +125,7 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_margin="8dp"
                         android:text="@string/recommended"
                         android:textSize="24sp" />
 
